# scpcopier

./: .gitignore  .gitmodules  CMakeLists.txt  config.json
src/: CMakeLists.txt  commands.cpp  commands.h  config.cpp  config.h  main.cpp  options.cpp  options.h  scp.cpp  scp.h  vcs.cpp  vcs.h
